--- a/instrument/audio-source-synthesizer.css
+++ b/instrument/audio-source-synthesizer.css
@@ -47,7 +47,7 @@
 }
 
 .audio-source-synthesizer-container:not(.selected):not(.focus) {
-    max-height: 2em;
+    max-height: 24px;
     overflow: hidden;
 }
 
